--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -6,7 +6,7 @@
     "header": [
         { "text": "Мой Иви", "path": "/" },
         { "text": "Что нового", "path": "/" },
-        { "text": "Фильмы", "path": "/" },
+        { "text": "Фильмы", "path": "/movies" },
         { "text": "Сериалы", "path": "/s" },
         { "text": "Мультфильмы", "path": "/" },
         { "text": "TV+", "path": "/" }
