--- a/src/locales/ru/cardMovie.json
+++ b/src/locales/ru/cardMovie.json
@@ -4,7 +4,7 @@
     "minutes":"мин.",
     "voiceLanguage":"Рус",
     "preSubtitles":"Рус",
-    "rating":"Реитинг",
+    "rating":"Рейтинг",
     "ivi":"Иви",
     "paragraph":"Приглашаем посмотреть фильм",
     "paragraph2":"в нашем онлайн-кинотеатре совершенно бесплатно в хорошем HD качестве. Приятного просмотра!",
@@ -14,10 +14,14 @@
     "subtitle":"Русский",
     "imgSound":"Изображение и звук.",
     "quality":"Фактическое качество зависит от устройства и ограничений правообладателя.",
+    "qualityMobile":"Качество",
     "showDetail":"Детали о фильме",
     "hideDetail":"Свернуть детали",
+    "readMore":"Читать дальше",
+    "hide":"Свернуть",
     "plot":"Интересный сюжет",
     "evaluation":"оценить",
     "ratings":"оценка",
-    "trailer":"Трейлер"
+    "trailer":"Трейлер",
+    "button":"Назад"
 }
