добавлены дропдаун и чекбоксы для фильтров

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -9,5 +9,74 @@
     "by_alphabet": "Alphabetically",
     "by_date": "By release date (newest first)",
     "by_amount": "By the number of ratings"
+  },
+  "genres": "Genres",
+  "countires": "Countries",
+  "genres_list": {
+    "arthouse": "Arthouse",
+    "western": "Western",
+    "for children": "For children",
+    "foreign": "Foreign",
+    "comedies": "Comedies",
+    "mystical": "Mystical",
+    "adventures": "Adventures",
+    "soviet": "Soviet",
+    "horror": "Horror",
+    "biography": "Biography",
+    "military": "Military",
+    "documentary": "Documentary",
+    " historical": "Historical",
+    "crime": "Crime",
+    "musical": "Musical",
+    "russian": "Russian",
+    "sport": "Sport",
+    "science fiction": "Science Fiction",
+    "action": "Action",
+    "detectives": "Detectives",
+    "drama": "Drama",
+    "disaster": "Disaster",
+    "melodrama": "Melodrama",
+    "by comics": "By comics",
+    "family": "Family",
+    "thrillers": "Thrillers",
+    "fantasy": "Fantasy"
+  },
+  "countries_list": {
+    "Australia": "Australia",
+    "Belarus": "Belarus",
+    "Great Britain": "Great Britain",
+    "Hong Kong": "Hong Kong",
+    "Ireland": "Ireland",
+    "Kazakhstan": "Kazakhstan",
+    "Colombia": "Colombia",
+    "New Zealand": "New Zealand",
+    "Russia": "Russia",
+    "Thailand": "Thailand",
+    "France": "France",
+    "South Africa": "South Africa",
+    "Argentina": "Argentina",
+    "Belgium": "Belgium",
+    "Hungary": "Hungary",
+    "Denmark": "Denmark",
+    "Spain": "Spain",
+    "Canada": "Canada",
+    "Mexico": "Mexico",
+    "Norway": "Norway",
+    "USSR": "USSR",
+    "Türkiye": "Türkiye",
+    "Switzerland": "Switzerland",
+    "South Korea": "South Korea",
+    "Armenia": "Armenia",
+    "Brazil": "Brazil",
+    "Germany": "Germany",
+    "India": "India",
+    "Italy": "Italy",
+    "China": "China",
+    "Netherlands": "Netherlands",
+    "Poland": "Poland",
+    "USA": "USA",
+    "Finland": "Finland",
+    "Sweden": "Sweden",
+    "Japan": "Japan"
   }
 }
