--- a/src/locales/ru/common.json
+++ b/src/locales/ru/common.json
@@ -9,5 +9,74 @@
     "by_alphabet": "По алфавиту",
     "by_date": "По дате выхода (сначала свежие)",
     "by_amount": "По количеству оценок"
+  },
+  "genres": "Жанры",
+  "countires": "Страны",
+  "genres_list": {
+    "arthouse": "Артхаус",
+    "western": "Вестерн",
+    "for children": "Для детей",
+    "foreign": "Зарубежные",
+    "comedies": "Комедии",
+    "mystical": "Мистические",
+    "adventures": "Приключения",
+    "soviet": "Советские",
+    "horror": "Ужасы",
+    "biography": "Биография",
+    "military": "Военные",
+    "documentary": "Документальные",
+    " historical": "Исторические",
+    "crime": "Криминал",
+    "musical": "Музыкальные",
+    "russian": "Русские",
+    "sport": "Спорт",
+    "science fiction": "Фантастика",
+    "action": "Боевики",
+    "detectives": "Детективы",
+    "drama": "Драмы",
+    "disaster": "Катастрофы",
+    "melodrama": "Мелодрамы",
+    "by comics": "По комиксам",
+    "family": "Семейные",
+    "thrillers": "Триллеры",
+    "fantasy": "Фэнтези"
+  },
+  "countries_list": {
+    "Australia": "Австралия",
+    "Belarus": "Беларусь",
+    "Great Britain": "Великобритания",
+    "Hong Kong": "Гонконг",
+    "Ireland": "Ирландия",
+    "Kazakhstan": "Казахстан",
+    "Colombia": "Колумбия",
+    "New Zealand": "Новая Зеландия",
+    "Russia": "Россия",
+    "Thailand": "Таиланд",
+    "France": "Франция",
+    "South Africa": "ЮАР",
+    "Argentina": "Аргентина",
+    "Belgium": "Бельгия",
+    "Hungary": "Венгрия",
+    "Denmark": "Дания",
+    "Spain": "Испания",
+    "Canada": "Канада",
+    "Mexico": "Мексика",
+    "Norway": "Норвегия",
+    "USSR": "СССР",
+    "Türkiye": "Турция",
+    "Switzerland": "Швейцария",
+    "South Korea": "Южная Корея",
+    "Armenia": "Армения",
+    "Brazil": "Бразилия",
+    "Germany": "Германия",
+    "India": "Индия",
+    "Italy": "Италия",
+    "China": "Китай",
+    "Netherlands": "Нидерланды",
+    "Poland": "Польша",
+    "USA": "США",
+    "Finland": "Финляндия",
+    "Sweden": "Швеция",
+    "Japan": "Япония"
   }
 }
